--- a/documentacion/estado-arte-protocolos.tex
+++ b/documentacion/estado-arte-protocolos.tex
@@ -10,10 +10,37 @@
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm,headheight=1cm,headsep=0.5cm}
 \usepackage{enumitem}
 
+\usepackage{xcolor}
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=[rgb]{0 0 0},
+    filecolor=magenta,      
+    urlcolor=blue,
+}
+\urlstyle{same}
 
 \usepackage{amsmath}
+
+% Sangrado y espacio entre párrafos
+\setlength{\parskip}{1em}
+\setlength{\parindent}{1.5em}
+
 \begin{document}
+
+\tableofcontents
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=[rgb]{0.149 0 0.3216},
+    filecolor=magenta,      
+    urlcolor=blue,
+    citecolor=blue,
+}
+\urlstyle{same}
+
+
+\newpage
 
 \section{Internet de las Cosas}\label{internet-de-las-cosas}
 
@@ -27,11 +54,9 @@ El Internet de las Cosas es un paradigma tecnológico en sí mismo.
 Desglosándo el concepto vemos que reúne dos tecnologías. Por un lado
 parte de ``las cosas'', que abarca desde los dispositivos y
 electrodomésticos que podemos encontrar en nuestro día a día; que tienen
-una funcionalidad en sí misma (p.ej. una televisión, un frigorífico)
+una funcionalidad en sí misma (p.ej. una televisión, un frigorífico),
 hasta incluso podemos abstraer a personas o animales (una persona con un
-marcapasos o un ave con un geolocalizador,
-\href{https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT}{ejemplos que podemos encontrar aquí}
-). A estas ``cosas'' se les añade el término
+marcapasos, un ave con un geolocalizador u otros ejemplos\cite{iotagendawebsiteWhatInternetThings}). A estas ``cosas'' se les añade el término
 ``Internet'', que no es más que una abstracción de la conectividad que
 permite dotar a las cosas de comunicación con el exterior, extendiendo
 sus funcionalidades sin privarlas de su funcionamiento original. Esta es
@@ -58,13 +83,12 @@ misma capacidad.
 
 Los beneficios que podemos obtener de este paradigma se pueden aplicar
 en muchas áreas, por
-ejemplo\href{http://ird.sut.ac.th/e-journal/Journal/suwimonv/1403739/1403739.pdf}{p
-5-17}:
+ejemplo\cite{vongsingthongs.;smanchats.IoTExamplesSuranaree}:
 
 \begin{itemize}
 \item
   Logística: Rastreo de envíos por correo o estado del stock en
-  almacenes, automatizando lectura de los ítems mediante wifi.
+  almacenes, automatizando lectura de los items mediante wifi.
 \item
   Transporte: Gestión automática de rutas por GPS; captura y procesado
   de infracciones de velocidad.
@@ -80,6 +104,8 @@ ejemplo\href{http://ird.sut.ac.th/e-journal/Journal/suwimonv/1403739/1403739.pdf
 Este último ejemplo es justo la motivación de nuestro trabajo. Podemos
 usar esta tecnología para crear un enchufe inteligente que nos permita
 saber nuestro consumo eléctrico y controlar el uso que le damos.
+
+\newpage
 
 \section{Revisión de enchufes inteligentes existentes en el
 mercado}\label{revisiuxf3n-de-enchufes-inteligentes-existentes-en-el-mercado}
@@ -97,17 +123,16 @@ dispositivo electrónico y la corriente alterna para la alimentación de
 este dispositivo.
 
 Estos trabajan con unos voltajes entre 100V y 240V
-(https://www.iec.ch/worldplugs/list\_byelectricpotential.htm). El tipo
-de enchufe, voltaje y frecuencia usados en una región geográfica vienen
-determinados por un convenio fijado por el gobierno de esa zona.
+\cite{iecIECWorldPlugs}. El tipo de enchufe, voltaje y frecuencia
+usados en una región geográfica vienen determinados por un convenio
+fijado por el gobierno de esa zona.
 
-Por razones históricas
-(https://www.nuevatribuna.es/articulo/ciencia/origen-frecuencias-electricas-50-y-60-hz/20150811110350118983.html)
+Por razones históricas\cite{nuevatribunaOrigenFrecuenciasElectricas}
 no existe una estandarización.
 
 Trabajaremos con el tipo de enchufe usado en España, que cuenta con un
-potencial de 230V y una frecuencia de 50Hz.
-(https://www.iec.ch/worldplugs/list\_bylocation.htm).
+potencial de 230V y una frecuencia de 50Hz\cite{IECWorldPlugs}.
+
 
 \subsection{¿Qué es un enchufe
 inteligente?}\label{quuxe9-es-un-enchufe-inteligente}
@@ -135,7 +160,7 @@ a anomalías como el consumo en horarios no esperados o picos de voltaje.
 
 Manejar tus dispositivos de manera remota, programar el horario de
 funcionamiento de estos o la manera en la que funcionan son solo algunas
-de las posibilidades. Destacando la posibilidad de integración con otros
+de las opciones. Destacando la posibilidad de integración con otros
 dispositivos que proporcionen una mayor accesibilidad (p.ej. la interfaz
 de voz de un asistente de móvil).
 
@@ -178,6 +203,8 @@ clasificación previa:
   control remoto.
 \end{itemize}
 
+\newpage
+
 \section{Arquitecturas IoT}\label{arquitecturas-iot}
 
 El paradigma de IoT viene a integrarse entre los mecanismos
@@ -189,17 +216,16 @@ definir y a trabajar mejor con los requisitos de estos nuevos sistemas.
 Existen diferentes arquitecturas en la actualidad, que difieren en el
 enfoque que le dan a ciertos campos. Dos de los más conocidos son IoT-A
 e IIRA. Siendo el primero el más extendido desde su lanzamiento en 2012
-\href{https://web.archive.org/web/20191116195145/https://www.researchgate.net/publication/288855901_Reference_Architectures_for_the_Internet_of_Things}{}.
+\cite{weyrichReferenceArchitecturesInternet2016}.
 
-Estos campos de comparación
-son:\href{https://web.archive.org/web/20191116203648/https://www.sciencedirect.com/science/article/abs/pii/S1389128610001568?via=ihub}{}
+Algunos campos de comparación entre arquitecturas de IoT son\cite{atzoriInternetThingsSurvey2010}:
 
 \begin{itemize}
 \item
   El enfoque particular a casos de negocio frente a conceptos generales.
 \item
-  Orientación a Internet: Se introducen nuevos protocolos y se adaptan
-  los ya existentes a sus necesidades.
+  Orientación a Internet: Si se introducen nuevos protocolos y se
+  adaptan los ya existentes a sus necesidades.
 \item
   Tipo de dispositivo sobre el cual se orienta (como sensores o
   actuadores).
@@ -208,7 +234,7 @@ son:\href{https://web.archive.org/web/20191116203648/https://www.sciencedirect.c
 \subsection{Modelos de interconexión de
 red}\label{modelos-de-interconexiuxf3n-de-red}
 
-\subsection{Protocolos}\label{protocolos}
+\subsection{Protocolos}\label{subsec:protocolos}
 
 Dos ordenadores convencionales necesitan una pila de protocolos para que
 puedan transmitir información a las distintas capas que conforman la
@@ -216,28 +242,98 @@ comunicación. Ante los requisitos que surgían con los dispositivos IoT,
 surgían también protocolos que daban respuesta a estos. Estableciéndose
 así una pila de protocolos de red especializada para IoT.
 
+A fin de permitir estas comunicaciones de manera liviana es necesario
+alguna tecnología a \textbf{nivel físico} que pueda solventar el
+problema de la saturación del espectro de frecuencias, algunas
+propuestas se basan en aprovechar el ruido blanco (frecuencias no
+usadas en el espectro de radio)\cite{tempertonTVWhiteSpace2015}.  En
+la \textbf{capa de enlace} se encuentra 6LoWPAN
+\cite{schumacherIPv6LowPowerWireless} para conectar los dispositivos a
+una red IP, dicha red ha de ser del tipo IPv6 (\textbf{capa de red})
+para dar soporte a la escalabilidad.
+
+En la \textbf{capa de aplicación} existen alternativas para
+proporcionar un transporte de datos con baja sobrecarga en la
+comunicación. Algunas de estas opciones
+son\cite{al-fuqahaInternetThingsSurvey2015}: \textbf{CoAP}
+(Constrained Application Protocol), usado como un protocolo web basado
+en \textit{REST}\cite{WebServicesArchitecture}; \textbf{XMPP}
+(Extensible Messaging and Presence Protocol), usado especialmente en
+mensajería; \textbf{DDS} (Data Distribution Service), especializado en
+aplicaciones de tiempo real y con alta disponibilidad; o \textbf{MQTT}
+(Message Queue Telemetry Transport), para conectar dispositivos
+embebidos con aplicaciones y middleware.
+
+Esta es una de las decisiones que más afecta al diseño, pues el resto
+del diseño de la arquitectura se ve afectado por ello.
+
+\newpage
+
 \section{Diseño de la arquitectura de nuestro
 sistema}\label{diseuxf1o-de-la-arquitectura-de-nuestro-sistema}
 
 \subsection{Descripción general}\label{descripciuxf3n-general}
 
+Nuestro enchufe inteligente recogerá mediante el sensor SCT013 la
+corriente que requiere el dispositivo conectado. En el módulo ESP32 se
+realiza el cálculo del consumo en Vatios y se emite hacia nuestro
+servidor, una Raspberry Pi con Mosquitto, y MQTT, de donde se podrá
+transmitir a una aplicación externa para supervisar el consumo y
+manipular el enchufe.
+
 \subsection{Modelo de red usado}\label{modelo-de-red-usado}
 
+La topología de red usada en este proyecto es el modelo en
+estrella. En el centro se encuentra nuestro servidor que se encarga de
+gestionar tanto la información de los sensores como de otorgar la
+visualización y manejo sobre los enchufes a los usuarios. En los
+extremos se encontrarían tanto los enchufes inteligentes como los
+usuarios desde sus aplicaciones.
+
 \subsection{Protocolo MQTT}\label{protocolo-mqtt}
+
+De los protocolos previamente mencionados [\ref{subsec:protocolos}]
+optamos por utilizar MQTT por su facilidad de integración con
+Mosquitto, un broker (agente intermediario) que implementa este
+protocolo y cuya ligera carga le permite ejecutarse en servidores de
+bajas prestaciones (Raspberry Pi, en nuestro caso).
+
+MQTT utiliza el patrón de publicación/suscripción (publish-suscribe),
+un publicador escribe sobre un tema (topic) del cual un suscriptor
+lee. Está construido sobre TCP.
+
+El tipo de comunicación en este protocolo es indicado en cada mensaje
+en la cabecera del paquete. Proporciona mensajes para conexión
+(CONNECT), desconexión (DISCONNECT), publicar en un tema (PUBLISH),
+suscribirse/desuscribirse a un tema (SUBSCRIBE/UNSUSCRIBE) y otros
+mensajes de control correspondientes a una respuesta ACK (pues está
+basado en TCP)\cite{banksMQTTVersionEdited}.
 
 \subsection{Diseño broker, publishers,
 suscribers}\label{diseuxf1o-broker-publishers-suscribers}
 
+Aunque existen otros subtipos de patrones publicador/suscriptor
+basados en tipo o en contenido\cite{p.th.eugsterManyFacesPublish},
+MQTT utiliza un modelo basado en temas.
 
+Las principales componentes de este patrón son suscriptor, publicador
+y el broker. Un dispositivo interesado se registra como suscriptor de
+un tema y el broker se encargará de informarle cuando se publique algo
+en el tema. El publicador actúa como un generador de información de
+algún tema de interés. El broker es el intermediario que transmite a
+los interesados, teniendo en cuenta además comprobaciones de seguridad
+mediante autorización de publicadores y
+suscriptores.\cite{al-fuqahaInternetThingsSurvey2015,hunkelerMQTTSPublishSubscribe2008}
+
+\subsubsection{Mosquitto}
+
+El broker que usamos en nuestro diseño es
+\textbf{Mosquitto}\cite{EclipseMosquitto}. Agente que implementa MQTT
+v3.1.1, la versión de MQTT usada en este proyecto.
 
 \newpage
 
-\cite{IECWorldPlugs}
-
-%\nocite{*}
-
-
-\bibliographystyle{abbrv}
+\bibliographystyle{unsrt}
 \bibliography{biblio} 
 
 \end{document}
