doc: Añadida info del sensor de corriente. Closes #3

--- a/documentacion/memoria.tex
+++ b/documentacion/memoria.tex
@@ -394,7 +394,13 @@ El enchufe está compuesto por cuatro elementos principales:
   corriente. Transforma la corriente de entrada entre 0 y 100 Amperios
   en otra de salida entre 0 y 50 miliAmperios que, mediante el uso de
   una resistencia de carga que convierta a un voltaje adecuedo, el
-  módulo es capaz de procesar.}
+  módulo es capaz de procesar.
+
+  Los cables convencionales suelen estar compuestos por dos cables
+  internos que conducen la corriente. Para evitar que se anulen las
+  medidas el sensor se coloca en torno a uno de ellos. Además, es
+  posible medir el sentido de la corriente para determinar si se está
+  consumiendo o generando electricidad.}
 
 \item{\textbf{Fuente de alimentación:} Una fuente de alimentación de
   5 Voltios y 2 Amperios para alimentar el módulo wifi.}
